[project]
name = "paper-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "chandumotati611",email = "devichandureddymotati@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
name = "paper_fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed"
authors = ["chandumotati611"]
packages = [{include = "paper_fetcher", from = "src"}]

[tool.poetry.scripts]
get-papers-list = "paper_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
